# weather-api

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
src/: main.rs
src/server/: error.rs  server.rs
src/weatherapi/: api.rs  client.rs  mod.rs  parser.rs
src/weatherapi/aeris_weather/: endpoint.rs  mod.rs  parser.rs  tests.rs
src/weatherapi/requester/: mod.rs  reqwest.rs
src/weatherapi/visual_crossing/: endpoint.rs  mod.rs  parser.rs  tests.rs
