[package]
name = "netology-test"
version = "0.1.0"
authors = ["Danil Anokhin <malefaro@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version="0.4.19", features=["serde"]}
async-trait = "0.1.50"
serde = "1.0.126"
serde_json = "1.0.64"
reqwest = "0.10.10"
actix-web = "3.3.2"

[dev-dependencies]
